of the previous simulation by passing 'reset_conc=>1' to parameter_scan(). Output files are
then generated for each observable containing the parameter values vs. final observable
values for both forward and reverse directions.

* Added support for compartments in writeSBML() and upgraded the supported
version of SBML to Level 2 Version 3.

* Modified 'setConcentration' action to read and retain expressions 
(rather than evaluating to a number).

* Modified 'readFile' to process SBML input files using $BNG_HOME/bin/sbmlTranslator.
'readFile' will also now throw an error if the input file extension is not any
of ".bngl", ".net", or ".xml".

* Modified 'readFile' to allow specific model blocks to be read using the 'blocks' argument.
** Example: <big><tt>readFile({file=>"filename.bngl",blocks=>["parameters","seed species"]})</tt></big>

* Modified NET file output to list all rules that generate a given 
reaction in the comment following each line of the "reactions" block.
This is useful when a reaction is generated by multiple different rules.
Often this is unintentional and can be problematic since BNG multiplies 
the rate constant by the number of duplicates generated. Listing all rules 
that generate a reaction can help identify and debug situations like this.

* Added instructions to Makefile.cmake for Mac OS X 10.9+ users regarding
modifications that must be made to build Network3.

* Added a default PLA configuration to 'simulate'. If 'method=>"pla"' and 
'pla_config' is not defined, the configuration is set to "fEuler|pre-neg:sb|eps=0.03", 
i.e., a standard tau-leaping method (1st order) with species-based preleap tau
calculations, negative-population postleap checking, and error control parameter 
'eps' of 0.03.

* Added support for <big><tt>method=>"nf"</tt></big> in <big><tt>simulate</tt></big>
action. This allows NFsim to be used in <big><tt>parameter_scan</tt></big> and
<big><tt>bifurcate</tt></big> actions as well.

* Bug fixes
